--- a/.github/workflows/macOS.yml
+++ b/.github/workflows/macOS.yml
@@ -29,9 +29,9 @@ jobs:
       
 #     - name: Self Looping
 #       run: |
-//        git clone https://${GitHubName}:${{ secrets.GH_TOKEN }}@github.com/${GITHUB_REPOSITORY} loop
-//        cd loop || exit 1
-//        echo $(( RANDOM - ( RANDOM % RANDOM ) )) > looper.txt
-//        git add looper.txt
-//        git commit -m "Looping at $(date -u +%D-%T%P)"
-//        git push -q https://${{ secrets.GH_TOKEN }}@github.com/${GITHUB_REPOSITORY} HEAD:main
+#        git clone https://${GitHubName}:${{ secrets.GH_TOKEN }}@github.com/${GITHUB_REPOSITORY} loop
+#        cd loop || exit 1
+#        echo $(( RANDOM - ( RANDOM % RANDOM ) )) > looper.txt
+#        git add looper.txt
+#        git commit -m "Looping at $(date -u +%D-%T%P)"
+#        git push -q https://${{ secrets.GH_TOKEN }}@github.com/${GITHUB_REPOSITORY} HEAD:main
