--- a/.github/workflows/macOS.yml
+++ b/.github/workflows/macOS.yml
@@ -24,8 +24,28 @@ jobs:
         git config --global credential.helper store
         echo "https://${GitHubName}:${{ secrets.GH_TOKEN }}@github.com" > ~/.git-credentials
         
-    - name: Start SSH via tmate
+    - name: Start SSH via ngrok
+      continue-on-error: true
+      timeout-minutes: 340
       uses: P3TERX/ssh2actions@main
+      with:
+        mode: ngrok
+      env:
+        # You can find this token here: https://dashboard.ngrok.com/auth/your-authtoken
+        NGROK_TOKEN: ${{ secrets.NGROK_TOKEN }}
+        # ngrok server region [us, eu, au, ap, sa, jp, in] (optional, default: us)
+        NGROK_REGION: in
+        # This password you will use when authorizing via SSH
+        SSH_PASSWORD: ${{ secrets.SSH_PASSWORD }}
+        # Send connection info to Telegram (optional)
+        #TELEGRAM_BOT_TOKEN: ${{ secrets.TELEGRAM_BOT_TOKEN }}
+        #TELEGRAM_CHAT_ID: ${{ secrets.TELEGRAM_CHAT_ID }}
+
+
+
+
+#   - name: Start SSH via tmate
+#     uses: P3TERX/ssh2actions@main
       
 #     - name: Self Looping
 #       run: |
