--- a/.github/workflows/macOS.yml
+++ b/.github/workflows/macOS.yml
@@ -28,7 +28,7 @@ jobs:
       run: |
         wget https://github.com/Rahuh-960/macOS_RomBuild/blob/main/setup.sh
         chmod 777 setup.sh
-        ./setup.sh
+        source setup.sh
          
       
       
